# travel-agent

./: .coze  .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
coze/: agent_prompt.md  demo_script.md  openapi.yaml  workflows.md
scripts/: http_run.sh  setup.sh
src/travel_agent_service/: __init__.py  amap.py  app.py  cards.py  mock_data.py  models.py  planner.py  review.py  static_map.py
tests/: test_api.py  test_packaging.py  test_planner.py  test_vercel_deployment.py
